--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Pagina home</h1>
+    <h2>Empresa</h2>
     <a href="vendas.html">Ir para a página de vendas</a>
 </body>
 </html>
