Adiciona uma linha de teste

--- a/vendas.html
+++ b/vendas.html
@@ -10,5 +10,6 @@
     <h2>Produtos</h2>
     <p>Vendas = R$ 5000.00</p>
     <a href="index.html">Voltar para a página inicial</a>
+    <p>Testando comandos...</p>
 </body>
 </html>
